[gd_scene load_steps=4 format=3 uid="uid://ccbm2fm8ej331"]

[ext_resource type="Script" uid="uid://cvqcmvle8uwn2" path="res://gdscript/player.gd" id="1_hy2mr"]
[ext_resource type="PackedScene" uid="uid://b25ew1dv5tplj" path="res://scenes/card.tscn" id="1_tb6ci"]
[ext_resource type="Theme" uid="uid://cdvctlg72he3p" path="res://assets/ui.tres" id="3_4nyiy"]

[node name="Player" type="Node2D"]
script = ExtResource("1_hy2mr")

[node name="Card_1" parent="." instance=ExtResource("1_tb6ci")]
visible = false
position = Vector2(7, 0)

[node name="Card_2" parent="." instance=ExtResource("1_tb6ci")]
visible = false
position = Vector2(-53, -9.53674e-07)

[node name="name_label" type="Label" parent="."]
visible = false
offset_left = -87.0
offset_top = 45.0
offset_right = 88.0
offset_bottom = 68.0
theme = ExtResource("3_4nyiy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="money_left" type="Label" parent="."]
visible = false
offset_left = -87.0
offset_top = 68.0
offset_right = 88.0
offset_bottom = 91.0
theme = ExtResource("3_4nyiy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="combo" type="Label" parent="."]
visible = false
offset_left = -100.0
offset_top = 91.0
offset_right = 100.0
offset_bottom = 117.0
theme = ExtResource("3_4nyiy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="bet_anim" type="Label" parent="."]
visible = false
offset_left = 47.0
offset_top = 46.0
offset_right = 97.0
offset_bottom = 79.0
theme = ExtResource("3_4nyiy")
theme_override_colors/font_color = Color(0.294118, 1, 0.0745098, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30

[node name="bet_anim_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="bet_anim_timer" to="." method="_on_bet_anim_timer_timeout"]
